--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#3a3a48</color>
+    <color name="colorPrimaryDark">#3a3a48</color>
+    <color name="colorAccent">#6e5feb</color>
+    <color name="colorAccentDark">#26252e</color>
+
+    <color name="popup_bg_color">#ffffff</color>
+    <color name="popup_heading_color">#99474747</color>
+    <color name="popup_message_color">#474747</color>
+    <color name="popup_btn_bg_color">#ffffff</color>
+    <color name="popup_btn_bg_pressed_color">#b2b2b2</color>
+    <color name="popup_btn_positive_color">#ffffff</color>
+    <color name="popup_btn_negative_color">#f56258</color>
+
+    <!-- grey scale -->
+    <color name="white">#FFFFFF</color>
+    <color name="gray_light">#DBDBDB</color>
+    <color name="gray">#939393</color>
+    <color name="gray_dark">#5F5F5F</color>
+    <color name="black">#000</color>
+    <color name="pure_black">#000</color>
+    <color name="charcoal_grey">#333c40</color>
+    <color name="transparent">#0000</color>
+    <color name="red">#f44336</color>
+    <color name="success">#26840a</color>
+
 </resources>
