--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -7,18 +7,23 @@
     android:background="@color/colorPrimary"
     tools:context=".features.host.HostActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/main_flow"
+    <LinearLayout
+        android:id="@+id/llContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <include
         android:id="@+id/nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         layout="@layout/bottom_navigation"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
