--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,14 +3,178 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     tools:context=".features.home.HomeFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:id="@+id/tvCurrentDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:textColor="@color/yellow"
+        android:drawableStart="@drawable/ic_date"
+        android:textAppearance="@style/CustomTextAppearance.Bold"
+        android:drawablePadding="10dp"
+        android:text="Sunday, March 29th"
+        android:textSize="@dimen/font_large"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/tvGlobalLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
         android:textColor="@color/white"
-        android:text="Home Fragment" />
+        android:textAppearance="@style/CustomTextAppearance.Semibold"
+        android:text="Global Results"
+        android:textSize="@dimen/font_xlarge"
+        android:layout_margin="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCurrentDate"
+        />
+
+    <LinearLayout
+        android:id="@+id/llTotalCases"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/selector_dark_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+        app:layout_constraintEnd_toEndOf="@id/guide1"
+        >
+        <TextView
+            android:id="@+id/tvTotalCasesLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textColor="@color/white"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="Total Cases"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvTotalCases"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="15,240"
+            android:textSize="40sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.65"
+        />
+
+    <LinearLayout
+        android:id="@+id/llTodayCases"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:paddingTop="10dp"
+        android:paddingStart="10dp"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:background="@drawable/selector_dark_background"
+        app:layout_constraintStart_toStartOf="@id/guide1"
+        app:layout_constraintTop_toTopOf="@id/llTotalCases"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/llFatalityRate"
+        >
+        <TextView
+            android:id="@+id/tvTodayCasesLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textColor="@color/white"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="Today"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvTodayCases"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="6248+"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llFatalityRate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:paddingTop="10dp"
+        android:paddingStart="10dp"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:background="@drawable/selector_dark_background"
+        app:layout_constraintStart_toStartOf="@id/guide1"
+        app:layout_constraintTop_toBottomOf="@id/llTodayCases"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/llTotalCases"
+        >
+        <TextView
+            android:id="@+id/tvFatalityRateLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textColor="@color/white"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="Fatality Rate"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvFatalityRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="5.32 %"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
