--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -7,23 +7,33 @@
     android:background="@color/colorPrimary"
     tools:context=".features.host.HostActivity">
 
-    <LinearLayout
-        android:id="@+id/llContainer"
+    <fragment
+        android:id="@+id/nav_host_fragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nvBottom"
+        />
 
-
-    <include
-        android:id="@+id/nav_view"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nvBottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
+        app:menu="@menu/main"
+        android:layout_gravity="end"
+        app:labelVisibilityMode="unlabeled"
+        app:itemTextAppearanceActive="@style/CustomTextAppearance.Bold"
+        app:itemTextAppearanceInactive="@style/CustomTextAppearance.Bold"
+        app:itemTextColor="@color/nav_selector"
+        app:itemIconTint="@color/nav_selector"
+        android:background="@drawable/background_navigation"
         app:layout_constraintBottom_toBottomOf="parent"
-        layout="@layout/bottom_navigation"/>
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
