--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
         android:drawableStart="@drawable/ic_date"
         android:textAppearance="@style/CustomTextAppearance.Bold"
         android:drawablePadding="10dp"
-        android:text="Sunday, March 29th"
+        tools:text="Sunday, March 29th"
         android:textSize="@dimen/font_large"
         android:layout_margin="20dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +37,7 @@
         android:gravity="end"
         android:textColor="@color/white"
         android:textAppearance="@style/CustomTextAppearance.Semibold"
-        android:text="Global Results"
+        android:text="@string/global_results"
         android:textSize="@dimen/font_xlarge"
         android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,26 +59,27 @@
         >
         <TextView
             android:id="@+id/tvTotalCasesLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="center"
             android:textColor="@color/white"
             android:textAppearance="@style/CustomTextAppearance.Bold"
-            android:text="Total Cases"
-            android:textSize="24sp"
+            android:text="@string/total_cases"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
             />
 
         <TextView
             android:id="@+id/tvTotalCases"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="center"
+            android:textAlignment="center"
             android:textColor="@color/yellow"
             android:textAppearance="@style/CustomTextAppearance.Bold"
             android:text="15,240"
-            android:textSize="40sp"
+            android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
             app:layout_constraintStart_toStartOf="parent"
             />
@@ -90,8 +91,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.65"
+        app:layout_constraintGuide_percent="0.5"
         />
+
 
     <LinearLayout
         android:id="@+id/llTodayCases"
@@ -100,37 +102,104 @@
         android:orientation="vertical"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:paddingTop="10dp"
-        android:paddingStart="10dp"
-        android:paddingBottom="10dp"
-        android:paddingEnd="10dp"
+        android:padding="30dp"
         android:background="@drawable/selector_dark_background"
         app:layout_constraintStart_toStartOf="@id/guide1"
         app:layout_constraintTop_toTopOf="@id/llTotalCases"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/llFatalityRate"
         >
         <TextView
             android:id="@+id/tvTodayCasesLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textAppearance="@style/CustomTextAppearance.Bold"
-            android:text="Today"
-            android:textSize="12sp"
+            android:text="@string/today"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
             />
 
         <TextView
             android:id="@+id/tvTodayCases"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
             android:textColor="@color/yellow"
+            android:textAlignment="center"
             android:textAppearance="@style/CustomTextAppearance.Bold"
             android:text="6248+"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llTotalDeaths"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:paddingTop="12dp"
+        android:paddingStart="10dp"
+        android:paddingBottom="12dp"
+        android:paddingEnd="10dp"
+        android:background="@drawable/selector_dark_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/llTotalCases"
+        app:layout_constraintEnd_toEndOf="@id/guide1"
+        >
+        <TextView
+            android:id="@+id/tvTotalDeathLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="@string/total_deaths"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvTotalDeaths"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="5.32 %"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/tvTodayDeathsLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="@string/today_deaths"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvTodayDeaths"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="5.32 %"
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,41 +208,67 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/llFatalityRate"
+        android:id="@+id/llRecoveryInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:paddingTop="10dp"
+        android:paddingTop="12dp"
         android:paddingStart="10dp"
-        android:paddingBottom="10dp"
+        android:paddingBottom="12dp"
         android:paddingEnd="10dp"
         android:background="@drawable/selector_dark_background"
-        app:layout_constraintStart_toStartOf="@id/guide1"
-        app:layout_constraintTop_toBottomOf="@id/llTodayCases"
+        app:layout_constraintTop_toBottomOf="@id/llTotalCases"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/llTotalCases"
+        app:layout_constraintStart_toStartOf="@id/guide1"
         >
         <TextView
-            android:id="@+id/tvFatalityRateLabel"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvTotalRecoveredLabel"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textAppearance="@style/CustomTextAppearance.Bold"
-            android:text="Fatality Rate"
+            android:text="@string/recovered"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
             />
 
         <TextView
-            android:id="@+id/tvFatalityRate"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvTotalRecovered"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="5.32 %"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/tvActiveCasesLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="@string/active_cases"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvActiveCases"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:textColor="@color/yellow"
             android:textAppearance="@style/CustomTextAppearance.Bold"
             android:text="5.32 %"
