--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,16 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/tvCurrentDate"
         android:layout_width="wrap_content"
@@ -30,6 +40,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvInfoImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tvCurrentDate"
+        />
+
     <TextView
         android:id="@+id/tvGlobalLabel"
         android:layout_width="wrap_content"
@@ -41,7 +59,7 @@
         android:textSize="@dimen/font_xlarge"
         android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvCurrentDate"
+        app:layout_constraintTop_toBottomOf="@id/rvInfoImage"
         />
 
     <LinearLayout
@@ -142,7 +160,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:paddingTop="12dp"
         android:paddingStart="10dp"
         android:paddingBottom="12dp"
@@ -205,6 +223,34 @@
             app:layout_constraintStart_toStartOf="parent"
             />
 
+        <TextView
+            android:id="@+id/tvCriticalLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="@string/critical"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvCritical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="5.32 %"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -213,7 +259,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:paddingTop="12dp"
         android:paddingStart="10dp"
@@ -277,7 +323,188 @@
             app:layout_constraintStart_toStartOf="parent"
             />
 
+        <TextView
+            android:id="@+id/tvAffectedCountriesLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="@string/affected_countries"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+            />
+
+        <TextView
+            android:id="@+id/tvAffectedCountries"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+            android:textAppearance="@style/CustomTextAppearance.Bold"
+            android:text="5.32 %"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
     </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/llTotalTest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/selector_dark_background"
+            app:layout_constraintTop_toBottomOf="@id/llTotalDeaths"
+            >
+            <TextView
+                android:id="@+id/tvTotalTestLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textAppearance="@style/CustomTextAppearance.Bold"
+                android:text="@string/total_tests_done"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvGlobalLabel"
+                />
+
+            <TextView
+                android:id="@+id/tvTotalTest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textColor="@color/yellow"
+                android:textAppearance="@style/CustomTextAppearance.Bold"
+                android:text="15,240"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/baseStats"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/selector_dark_background"
+            app:layout_constraintTop_toBottomOf="@id/llTotalTest"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvCasesPerLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.65"
+                    android:textAppearance="@style/CustomTextAppearance.Bold"
+                    android:text="Cases Per Million"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tvCasesPer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.35"
+                    android:gravity="end"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/yellow"
+                    android:textAppearance="@style/CustomTextAppearance.Bold"
+                    android:text="15,240"
+                    android:textSize="20sp"
+                    />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tvDeathsPerLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.65"
+                    android:textAppearance="@style/CustomTextAppearance.Bold"
+                    android:text="@string/deaths_per_million"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tvDeathsPer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.35"
+                    android:gravity="end"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/yellow"
+                    android:textAppearance="@style/CustomTextAppearance.Bold"
+                    android:text="15,240"
+                    android:textSize="20sp"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvTestPerLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.65"
+                    android:textAppearance="@style/CustomTextAppearance.Bold"
+                    android:text="@string/tests_per_million"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tvTestPer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.35"
+                    android:gravity="end"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/yellow"
+                    android:textAppearance="@style/CustomTextAppearance.Bold"
+                    android:text="15,240"
+                    android:textSize="20sp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
