--- a/app/src/main/res/layout/fragment_safety.xml
+++ b/app/src/main/res/layout/fragment_safety.xml
@@ -3,14 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     tools:context=".features.safety.SafetyFragment">
 
-    <TextView
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Safety Tips"
-        android:textColor="@color/white"
-        android:gravity="center"/>
+        android:layout_height="250dp"
+        app:lottie_fileName="stay.json"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
