--- a/app/src/main/res/layout/fragment_countries.xml
+++ b/app/src/main/res/layout/fragment_countries.xml
@@ -32,12 +32,14 @@
         android:autofillHints="no"
         android:inputType="text" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Feeds"
-        android:textColor="@color/white"
-        android:gravity="center"/>
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/rvCountries"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_margin="20dp"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/tvSearchCountry"
+       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
